Dodałem +2 kontrolery, Dodałem Modele Dodałem Repository Dodałem Migrations Dodałem views Poprawiłem kod w Startup

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿<h1>Wszysktie pojazdy</h1>
-<h3>@Model.currCategory</h3>
+﻿@model HomeViewModel
+
+<h1>Najlepsze pojazdy</h1>
 <div class="row mt-5 mb-2">
     @{
-        foreach (Car car in Model.allCars)
+        foreach (Car car in Model.favCars)
         {
             @Html.Partial("AllCars", car)
         }
