--- a/Views/ShopCart/Index.cshtml
+++ b/Views/ShopCart/Index.cshtml
@@ -8,6 +8,6 @@
         </div>
      }
 <hr />
-    <div class="btn btn-danger" asp-controller="Order">Zapłacić</div>
+    <a class="btn btn-danger" asp-controller="Order" asp-action ="Checkout">Zapłacić</a>
 
 </div>
