--- a/Views/Shared/AllCars.cshtml
+++ b/Views/Shared/AllCars.cshtml
@@ -5,5 +5,5 @@
     <h2>@Model.name</h2>
     <p>@Model.shortDesc</p>
     <p>Cena: @Model.price.ToString("c")</p>
-    <p><a class="btn btn-warning" href="#">Więcej informacji</a></p>
-</div> 
+    <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCart" asp-rote-id="@Model.id">Dodaj do koszyka</a></p>
+</div>  
